--- a/State_Farm_Distracted_Driver_Detection.ipynb
+++ b/State_Farm_Distracted_Driver_Detection.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1UzI_nEiuCBsgPGcdAaqST6rzle5M-UIK",
-      "authorship_tag": "ABX9TyNM2Um8CXUm0TlmbGa7v/g3",
+      "authorship_tag": "ABX9TyMuJdqMFEWeO+uptkKWmW2r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1863,10 +1863,10 @@
     {
       "cell_type": "code",
       "source": [
-        "def delete_image_files_with_parentheses(directory):\n",
-        "    \"\"\"\n",
-        "    Exclui arquivos de imagem que contêm parênteses em seus nomes e retorna a lista de arquivos excluídos.\n",
-        "    \"\"\"\n",
+        "def delete_image_files_with_parentheses\n",
+        "\n",
+        "#Exclui arquivos de imagem que contêm parênteses em seus nomes e retorna a lista de arquivos excluídos.\n",
+        "\n",
         "    supported_extensions = ('.png', '.jpg', '.jpeg', '.bmp', '.gif', '.tiff')\n",
         "    deleted_files = []\n",
         "\n",
@@ -2497,32 +2497,44 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **AVALIANDO A SAÍDA**"
+      ],
+      "metadata": {
+        "id": "DnlvS8GuFW_s"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "previsao = model.predict('/content/drive/MyDrive/Artigo - Janaina/img teste/teste.jpg')\n",
-        "print(previsao)"
+        "# Carregar a imagem\n",
+        "img = '/content/drive/MyDrive/Artigo - Janaina/img teste/teste.jpg'\n",
+        "img = image.load_img(img_path, target_size=(32, 32, 3))\n",
+        "img = image.img_to_array(img)\n",
+        "img = np.expand_dims(img_array, axis=0)\n",
+        "img = img_array/255.\n",
+        "\n",
+        "previsao = model.predict(img_array)\n",
+        "print(f\"com celular: {previsao[0][0] * 100:.2f}%\")\n",
+        "print(f\"sem cinto: {previsao[0][1] * 100:.20f}%\")"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 304
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "t7kriIUE_wxU",
-        "outputId": "f69d33bc-cc69-476f-8775-39c4469c5ffc"
+        "id": "tghbYPn7HMzD",
+        "outputId": "b9db6db1-9f03-4dee-f526-245cb403dafc"
       },
-      "execution_count": 24,
+      "execution_count": 47,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "IndexError",
-          "evalue": "tuple index out of range",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-24-dc2b148d8326>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprevisao\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/drive/MyDrive/Artigo - Janaina/img teste/teste.jpg'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprevisao\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/keras/src/utils/traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     68\u001b[0m             \u001b[0;31m# To get the full stack trace, call:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m             \u001b[0;31m# `tf.debugging.disable_traceback_filtering()`\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 70\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered_tb\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     71\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m             \u001b[0;32mdel\u001b[0m \u001b[0mfiltered_tb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/tensorflow/python/framework/tensor_shape.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    960\u001b[0m       \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    961\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_v2_behavior\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 962\u001b[0;31m           \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_dims\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    963\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    964\u001b[0m           \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdims\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mIndexError\u001b[0m: tuple index out of range"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1/1 [==============================] - 0s 40ms/step\n",
+            "com celular: 98.23%\n",
+            "sem cinto: 0.00000000351002421572%\n"
           ]
         }
       ]
